@@ -10,6 +10,9 @@ cupt (0.5.2) UNRELEASED; urgency=low
           'abc' depends on 'x | y | ...' cases when 'x' is going to be
           removed and 'y' is going to be installed. Thanks to Daniel Moerner.
           (Closes: #539953)
+        - While building action dependencies graph, ensure that if the action
+          dependency has even one "not eat" property it won't be lost even in
+          complicated merge scenarios.
 
  -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 05 Aug 2009 11:41:06 +0300
 
